2008-05-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gtk_theme_info_missing_engine),
	(gnome_theme_meta_info_validate):
	* gnome-theme-info.h: split out the check for the missing theme
	engine because we also need it for the packagekit support

2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_meta_info_validate): fix error
	code when GTK engine is missing, and fix the function signature

2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-theme-info.c: (gnome_theme_info_error_quark),
	(gnome_theme_meta_info_free), (gnome_theme_meta_info_validate):
	* gnome-theme-info.h: move metatheme validation code here from the
	appearance capplet and add proper error codes

2008-05-04  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-test.c: (main): doesn't need gnome-vfs any longer

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme), (read_cursor_fonts),
	(update_theme_index): always use URIs instead for info->path; since
	gio cleanly distinguishes path/uri (contrary to gnome-vfs), the
	random mix we have right now is becoming a nuisance

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c:
	* gnome-theme-info.c: (get_file_type), (add_theme_to_hash_by_name),
	(get_theme_from_hash_by_name), (gnome_theme_read_meta_theme),
	(read_icon_theme), (gdk_pixbuf_from_xcursor_image),
	(read_cursor_theme), (handle_change_signal), (update_theme_index),
	(update_gtk2_index), (update_keybinding_index),
	(update_metacity_index), (update_common_theme_dir_index),
	(update_meta_theme_index), (update_icon_theme_index),
	(update_cursor_theme_index), (gtk2_dir_changed),
	(keybinding_dir_changed), (metacity_dir_changed),
	(common_theme_dir_changed), (common_icon_theme_dir_changed),
	(add_common_theme_dir_monitor),
	(add_common_icon_theme_dir_monitor),
	(remove_common_theme_dir_monitor),
	(remove_common_icon_theme_dir_monitor), (top_theme_dir_changed),