@@ -1,8 +1,0 @@
-#ifndef __BONOBO_PROPERTY_RANGE_SCALE_H__
-#define __BONOBO_PROPERTY_RANGE_SCALE_H__
-
-#include <gtk/gtkwidget.h>
-
-GtkObject* bonobo_peditor_range_construct (GtkWidget *widget);
-
-#endif /* __BONOBO_PROPERTY_RANGE_SCALE_H__ */
