@@ -1,3 +1,8 @@
+2008-05-17  Jens Granseuer  <jensgr@gmx.net>
+
+	* bonobo-property-editor-range.c:
+	* bonobo-property-editor-range.h: remove unused files
+
 2008-05-07  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (gtk_theme_info_missing_engine),
